--- a/WEBProject/WebContent/css/home.css
+++ b/WEBProject/WebContent/css/home.css
@@ -58,6 +58,7 @@
 	position: relative;
 }
 
+
 .col-sm-12 {
 	position: relative;
 	padding-bottom: 10px;
@@ -91,8 +92,16 @@
 	background-color: black;
 }
 
+p {
+	font-size: 1vw;
+}
+
+h1 {
+	font-size: 3vw;
+}
+
 .smartphoneCategory>h1, .smartphoneCategory>p {
-	position: relative;
+	position: relative; 
 	top: 42%;
 }
 
@@ -108,14 +117,24 @@
 }
 
 .accessoryCategory>h1, .accessoryCategory>p {
-	position: relative;
+	position: relative; 
 	top: 50%;
 	margin-right: 50%;
-}
+} 
+
+@media only screen and (max-device-width:1024px) {
+	/* on phone and tablet */
+	.imageLaptop, .imageHardware, .imageAccessory {
+		max-width: 100%;
+		max-height: 50%;
+	}
+}  
 
 div.imageSmartphone {
 	position: absolute;
 	content: url("../img/iconSmartphone.png");
+	max-width: 100%;	
+	
 	height: 90%;
 	left: 50%;
 	top: 50%;
@@ -128,6 +147,8 @@ div.imageSmartphone {
 div.imageLaptop {
 	position: absolute;
 	content: url("../img/iconLaptop.png");
+	max-width: 100%;	
+	
 	height: 60%;
 	left: 50%;
 	top: 50%;
@@ -139,6 +160,8 @@ div.imageLaptop {
 div.imageHardware {
 	position: absolute;
 	content: url("../img/iconHardware.png");
+	max-width: 50%;	
+	
 	height: 85%;
 	top: 53%;
 	left: 40%;
@@ -150,6 +173,8 @@ div.imageHardware {
 div.imageAccessory {
 	position: absolute;
 	content: url("../img/iconAccessory.jpg");
+	max-width: 80%;	
+	
 	height: 125%;
 	top: 40%;
 	left: 70%;
