--- a/WEBProject/WebContent/css/product.css
+++ b/WEBProject/WebContent/css/product.css
@@ -72,7 +72,9 @@ textarea {
 
 #price2 {
 	color : black;
-	padding-left: 5px;
+	margin-left: 4%;
+	margin-top: 4%;
+	margin-bottom: 0%;
 }
 
 #priceDiv {
@@ -84,14 +86,17 @@ textarea {
 }
 
 #shipment {
-	padding-top: 1%;
+	margin-left: 5%;
+	margin-top: 0;
 	color: lightslategray;
 }
 
+
+
 #summary {
 	color: black;
-	margin-left: 5px;
-	margin-top: 3px;
+	margin-left: 3%;
+	margin-top: 5%;
 	
 }
 
@@ -100,11 +105,29 @@ textarea {
 }
 
 #quantityDiv {
-	margin: 0;
-	margin-bottom: 2%;
+	margin : 0;
+}
+
+
+#quantity {
+	margin-top : 5%;
+	margin-left: 5%;
+}
+
+#productQuantity {
+	margin-bottom: 4%;
+	margin-top: 4%;
 }
 
 #addToCart {
 	background-color: #feac01;
 	color: white;
+	margin-top: 4%;
 }
+
+#productInSummary {
+	margin-left: 4%;
+	margin-top: 2%;
+}
+
+
