implementing search option

--- a/WEBProject/WebContent/css/menuBar.css
+++ b/WEBProject/WebContent/css/menuBar.css
@@ -99,8 +99,8 @@ body {
 }
 
 .modal-content {
-	background-color: #208fff;
-	color: white;
+	/*background-color: #208fff;*/
+	/*color: white;*/
 }
 
 #buttonAddProduct {
