--- a/WEBProject/WebContent/css/menuBar.css
+++ b/WEBProject/WebContent/css/menuBar.css
@@ -37,13 +37,20 @@ body {
     border: 0;
     outline: 0;
     background: none;
-    width: 0;
     caret-color:transparent;
     line-height: 40px;
     transition: width 0.4s linear;
 }
 
-.searchbar:hover > .search_input{
+.search_input:not(:focus) {
+	width: 0;
+}
+
+.search_input:focus {
+	width: 20vh;
+}
+
+.searchbar:hover > .search_input {
     padding: 0 10px;
     width: 20vh;
     transition: width 0.4s linear;
