--- a/WEBProject/WebContent/css/insertProduct.css
+++ b/WEBProject/WebContent/css/insertProduct.css
@@ -1,11 +1,8 @@
 @charset "utf-8";
 
-#leftRowInsertProduct{
 
-}
-
-#rightRowInsertProduct{
-	
+div.card{
+	width:1280px;
 }
 
 div {
@@ -14,12 +11,44 @@ div {
 
 div.photoCameraInsertProduct{
 	position: relative;
-	content: url("../img/camera.jpg");
-	max-width: 50%;	
+	content: url("../img/camera2d.png");
 	cursor: pointer;
+	
 }
 
 #rowSubmitInsertProduct{
+	text-align: center;
+}
+
+#specificsText,#commentText{
+	padding-bottom:30px;
+}
+
+#insertImage{
+	padding-bottom: 30px;
+	text-align: center;
+}
+
+#titleInsertProduct{
+	text-align: center;
+	padding-bottom: 30px;
+}
+
+#priceInsertProduct{
+	padding-bottom: 30px;	
+}
+
+#insertManufacturer,#insertTitle{
+	padding-bottom: 30px;
+}
+
+#mainRow{
+	padding-left: 22%;
+	padding-right: 22%;
+	padding-bottom: 3%;
+}
+
+#inputInsertProduct{
 	position: relative;
-	left: 50%;
+	text-align: center;
 }
