--- a/WEBProject/WebContent/css/product.css
+++ b/WEBProject/WebContent/css/product.css
@@ -119,7 +119,8 @@ textarea {
 	margin-top: 4%;
 }
 
-#addToCart {
+#addToCart,#modifyProduct,#deleteProduct {
+	width: 100%;
 	background-color: #feac01;
 	color: white;
 	margin-top: 4%;
