--- a/WEBProject/WebContent/css/cart.css
+++ b/WEBProject/WebContent/css/cart.css
@@ -1,15 +1,76 @@
+img {
+	width: 20%;
+}
+
+#container {
+	margin-top: 3%;
+	position: relative;
+	height: 100%;
+}
+
+#emptyCart {
+	position: relative;
+	width: 100%;
+	font-size: 2vw;
+	font-weight: lighter;
+	color: #feac01;
+}
+
+.rowProduct {
+	margin-left: 5%;
+}
+
+#titlePrice {
+	left: 1%;
+	margin-bottom: 10px;
+}
+
+#rowProduct {
+	margin-left: 3%;
+	margin-bottom: 2%;
+}
+
+#modelProduct {
+	font-size: 2vw;
+}
+
+#modelProduct div {
+	font-size: 1vw;
+}
+
+#productPrice {
+	color: #c10d0d;
+}
+
+#trashIcon {
+	margin-top: 2%;
+	color: #0080ff;
+}
+
+#trashIcon:hover {
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+.hr {
+	width: 93%;
+}
+
 #goToPayment {
+	position: relative;
 	text-align: center;
-	right: 10%;
+	right: 3%;
 	background-color: #efefef;
+	height: 10%;
 }
 
 #totalPrice {
 	color: #c10d0d;
 	font-weight: bold;
+	font-size: 2vw;
 }
 
-button {
-	margin-top: 5%;
-	margin-bottom: 5%;
+#anchorPayment {
+	margin-top: 3%;
+	margin-bottom: 3%;
 }
