--- a/WEBProject/WebContent/css/cart.css
+++ b/WEBProject/WebContent/css/cart.css
@@ -20,13 +20,17 @@ img {
 	margin-left: 5%;
 }
 
+#titleQuantity {
+	left: 5%;
+}
 #titlePrice {
-	left: 1%;
+	left: 6%;
 	margin-bottom: 10px;
 }
 
-#rowProduct {
+.rowProduct {
 	margin-left: 3%;
+	margin-right: 3%;
 	margin-bottom: 2%;
 }
 
@@ -38,7 +42,7 @@ img {
 	font-size: 1vw;
 }
 
-#productPrice {
+.productPrice {
 	color: #c10d0d;
 }
 
