--- a/WEBProject/WebContent/css/cart.css
+++ b/WEBProject/WebContent/css/cart.css
@@ -62,9 +62,7 @@ img {
 
 #goToPayment {
 	position: relative;
-	text-align: center;
 	right: 3%;
-	background-color: #efefef;
 	height: 10%;
 }
 
@@ -77,4 +75,14 @@ img {
 #anchorPayment {
 	margin-top: 3%;
 	margin-bottom: 3%;
+}
+
+#cardPayment {
+	background-color: #efefef;
+	text-align: center;
+	
+}
+
+.form-group {
+	margin-bottom: 1%;
 }
