Added modifies for orders and cart(<c:if> at row 86)

--- a/WEBProject/WebContent/css/orders.css
+++ b/WEBProject/WebContent/css/orders.css
@@ -2,6 +2,16 @@
 div {
 	position: relative;
 }
+
+#orderLink>a:hover
+{
+	text-decoration: none;
+}
+
+#orderLink > a {
+	color: inherit;
+}
+
 #filterOnOrders
 {
 	padding-left: 2%;
