fixed cart and login bugs

--- a/WEBProject/WebContent/css/forgottenPassword.css
+++ b/WEBProject/WebContent/css/forgottenPassword.css
@@ -6,7 +6,7 @@
 	text-shadow: 0 0 0 white;
 }
 
-#buttonPassword {
+#buttonPassword, #buttonNewPassword {
 	margin-top: 7px;
 	margin-bottom: 7px;
 	color: transparent;
@@ -17,6 +17,6 @@
 	margin-top: 10px;
 }
 
-#wrongAnswer, #wrongUsername {
+#wrongAnswer, #wrongUsername, #buttonNewPassword, #invalidNewPassword {
 	visibility: hidden;
 }
