--- a/WEBProject/WebContent/css/product.css
+++ b/WEBProject/WebContent/css/product.css
@@ -141,4 +141,29 @@ textarea {
 	margin-top: 2%;
 }
 
+#titleQuestionsProduct {
+	background-color: #0080ff;
+	color: white;
+}
+
+#questionsBody {
+	max-height: 40vh;
+	overflow: auto;
+}
+
+#noQuestions, #noReviews {
+	color: gray;
+}
+
+#divQuestions {
+	margin-top: 4%;
+}
+
+#inputQuestion {
+	background-color: #e9e9e9;
+	/* color: #0080ff; */
+}
+
+
+
 
