--- a/WEBProject/WebContent/css/product.css
+++ b/WEBProject/WebContent/css/product.css
@@ -141,25 +141,25 @@ textarea {
 	margin-top: 2%;
 }
 
-#titleQuestionsProduct {
+#titleCommentsProduct {
 	background-color: #0080ff;
 	color: white;
 }
 
-#questionsBody {
+#commentsBody {
 	max-height: 40vh;
 	overflow: auto;
 }
 
-#noQuestions, #noReviews {
+#noComments, #noReviews {
 	color: gray;
 }
 
-#divQuestions {
+#divComments {
 	margin-top: 4%;
 }
 
-#inputQuestion {
+#inputComment {
 	background-color: #e9e9e9;
 	/* color: #0080ff; */
 }
