--- a/WEBProject/WebContent/css/menuBar.css
+++ b/WEBProject/WebContent/css/menuBar.css
@@ -1,5 +1,14 @@
-body {
-	width: 99%; 
+/* body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    max-width:100%;
+} */
+
+* {
+    max-width:100%;
 }
 
 #menuBar div {
