--- a/WEBProject/WebContent/css/menuBar.css
+++ b/WEBProject/WebContent/css/menuBar.css
@@ -1,16 +1,6 @@
-/* body, html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    max-width:100%;
-} */
-
-* {
-    max-width:100%;
+#menuBar {
+	width: 100%;
 }
-
 #menuBar div {
 	position: relative;
 }
