--- a/WEBProject/WebContent/css/search.css
+++ b/WEBProject/WebContent/css/search.css
@@ -22,8 +22,15 @@ img{
 	float: left;
 }
 
+#carouselBoxSearch {
+	width: 100%;
+	height: 25vh;
+	position: relative;
+}
 
-
+.carousel-control-prev, .carousel-control-next {
+	height: 100%;
+}
 #carouselBoxSearch div {
 	height: 25vh; 
 	z-index: 0;
